[package]
name = "missing_file_finder"
version = "1.1.0"
edition = "2021"

description = "A Rust application to compare a source and target directory to identify missing files."
authors = ["Andrew Sims andrew.sims.d@gmail.com"]
license = "MIT"
repository = "https://github.com/Andrewsimsd/missing-file-finder"

[dependencies]
walkdir = "2.4"
chrono = "0.4"
fern = "0.7.1"
log = "0.4"
sha2 = "0.10.8"
tempfile = "3.16.0"
rayon = "1.7"
indicatif = "0.17.11"